--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@trendyol-js/react-carousel": "^3.0.2",
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
+    "react-owl-carousel": "^2.3.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-type-animation": "^2.1.2",
     "react-uuid": "^2.0.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
