--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "react": "^18.2.0",
-    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
-    "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-type-animation": "^2.1.2",
     "react-uuid": "^2.0.0",
-    "styled-components": "^5.3.8",
+    "source-map-loader": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
