--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-chrono": "^1.22.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-type-animation": "^2.1.2",
