--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-type-animation": "^2.1.2",
     "react-uuid": "^2.0.0",
+    "slick-carousel": "^1.8.1",
     "source-map-loader": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
